:ok_hand: Fix img macro alignment option

#3360

--- a/frontend/scss/components/templates/docs-detail.scss
+++ b/frontend/scss/components/templates/docs-detail.scss
@@ -85,6 +85,10 @@ body {
         margin-top: 1.6rem;
       }
 
+      &.left { text-align: left; }
+      &.center { text-align: center; }
+      &.right { text-align: right; }
+
       &.half {
         amp-img {
           @media (min-width: 768px) {
